--- a/property-1.0.0/add-equip.html
+++ b/property-1.0.0/add-equip.html
@@ -143,22 +143,22 @@
                   <span style="display:flex;align-items: center;justify-content:flex-start;margin-left: 100px;margin-top: -15px;">
                     <button class="btn-new2">
                       <a class="tag-filter" href="#">櫻花
-                      <i class="fa-solid fa-circle-xmark"style="margin-left:10px;"></i>
+                      <i class="fa-solid fa-circle-xmark"style="margin-left: 15px;margin-right: -10px;"></i>
                       </a>
                     </button>
                     <button class="btn-new2">
                         <a class="tag-filter" href="#">櫻花
-                        <i class="fa-solid fa-circle-xmark"style="margin-left:10px;"></i>
+                        <i class="fa-solid fa-circle-xmark"style="margin-left: 15px;margin-right: -10px;"></i>
                         </a>
                       </button>
                       <button class="btn-new2">
                         <a class="tag-filter" href="#">櫻花
-                        <i class="fa-solid fa-circle-xmark"style="margin-left:10px;"></i>
+                        <i class="fa-solid fa-circle-xmark"style="margin-left: 15px;margin-right: -10px;"></i>
                         </a>
                       </button>
                       <button class="btn-new2">
                         <a class="tag-filter" href="#">櫻花
-                        <i class="fa-solid fa-circle-xmark"style="margin-left:10px;"></i>
+                        <i class="fa-solid fa-circle-xmark"style="margin-left: 15px;margin-right: -10px;"></i>
                         </a>
                       </button>
                       <button type="button" class="btn-new2" data-toggle="modal" data-target="#exampleModalCenter">
@@ -170,12 +170,16 @@
                             <div class="modal-body">
                               <span style="display: flex;">
                                 <h4 style="font-weight: bold;margin-top: 5px;margin-left: 10px;">新增標籤</h4>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <i id="close" class="fa-solid fa-circle-xmark" style="color:#a0a0a0;margin-left: 275px;margin-top: -5px;"></i>
+                                  </button>
                                 </span></div>
-                                <input type="text" value="設備名稱"
+                                
+                                <input type="text" value="標籤名稱"
                                     style="background-color: #F0F0F0; border-style: none; color:#9D9D9D; width: 350px; height: 40px; border-radius: 30px;padding: 20px;margin-left: 50px;margin-bottom: 75px;">    
                               </span>
                               <button class="btn-new"  style=" margin-left: 340px;margin-top: -55px;margin-right: 25px;" >
-                                <a href="#" style="color: #fff;">新增</a></button>
+                                <a href="add-equip.html" style="color: #fff;">確認</a></button>
                               
                             </div>
                           </div>
