--- a/deluxe-master/equipment.html
+++ b/deluxe-master/equipment.html
@@ -4,6 +4,8 @@
     <title>Deluxe - Free Bootstrap 4 Template by Colorlib</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="shortcut icon" href="Frame 5.png" /> 
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i" rel="stylesheet">
@@ -204,7 +206,7 @@
         
            <!-- .col-md-8 -->
           <div class="col-lg-4 sidebar ftco-animate">
-            <div class="input-group " style=" justify-content: flex-start;margin-left: 20px;">
+            <div class="input-group " style=" justify-content: flex-start;margin-left: 8px;">
               <button type="button" class="button-search" style="margin-left: 0px;">
                 <i class="icon-search"></i>
               </button>
@@ -221,7 +223,7 @@
               <i class="fa-solid fa-circle-plus"  style="font-size: 18px;margin-right: 8px;"></i>
                <h6>貼文</h6></span>
           </button>
-            <div class="sidebar-box ftco-animate">
+            <div class="sidebar-box ftco-animate mt-4">
               <div class="categories">
                 <h3>Categories</h3>
                 <li><a href="#">Properties <span>(12)</span></a></li>
