--- a/deluxe-master/equipment.html
+++ b/deluxe-master/equipment.html
@@ -60,10 +60,10 @@
   
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item "><a href="index.html" class="nav-link">首頁</a></li>
+            <li class="nav-item "><a href="property-1.0.0/index.html" class="nav-link">首頁</a></li>
             <li class="nav-item"><a href="rooms.html" class="nav-link">找小鹿</a></li>
             <li class="nav-item"><a href="restaurant.html" class="nav-link">鹿的分享</a></li>
-            <li class="nav-item"><a href="about.html" class="nav-link">鹿的裝備</a></li>
+            <li class="nav-item"><a href="equipment.html" class="nav-link">鹿的裝備</a></li>
             <li class="nav-item"><a href="blog.html" class="nav-link">廣告方案</a></li>
   
             <li class="nav-item dropdown active">
@@ -71,10 +71,10 @@
                 帳號
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="member.php">會員帳號</a>
-                <a class="dropdown-item" href="member-like.php">我的收藏</a>
+                <a class="dropdown-item" href="property-1.0.0/member.php">會員帳號</a>
+                <a class="dropdown-item" href="property-1.0.0/member-like.php">我的收藏</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="../../login.php">登出</a>
+                <a class="dropdown-item" href="../login.php">登出</a>
               </div>
             </li>
   
