--- a/deluxe-master/euip-single.html
+++ b/deluxe-master/euip-single.html
@@ -240,7 +240,7 @@
       </div>
     </section> <!-- .section -->
 
-    <div class="ad-banner">
+    <div class="ad-img">
       <img src="images/Group 147.png">
     </div>
     <section class="ftco-section">
