--- a/deluxe-master/equipment.html
+++ b/deluxe-master/equipment.html
@@ -62,12 +62,12 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item "><a href="property-1.0.0/index.html" class="nav-link">首頁</a></li>
             <li class="nav-item"><a href="rooms.html" class="nav-link">找小鹿</a></li>
-            <li class="nav-item"><a href="restaurant.html" class="nav-link">鹿的分享</a></li>
+            <li class="nav-item"><a href="all-article.html" class="nav-link">鹿的分享</a></li>
             <li class="nav-item"><a href="equipment.html" class="nav-link">鹿的裝備</a></li>
             <li class="nav-item"><a href="blog.html" class="nav-link">廣告方案</a></li>
   
             <li class="nav-item dropdown active">
-              <a class="nav-link dropdown-toggle" href="member.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="member.php" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 帳號
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -84,25 +84,17 @@
     </nav>
     <!-- END nav -->
 
-    <div
-      class="hero page-inner overlay"
-      style="background-image: url('images/Rectangle\ 340.png'); 
-      height:70vh;
-      min-height: 300px;"  >
+    <div class="hero page-inner overlay" style="background-image: url('images/Rectangle\ 340.png'); height:70vh; min-height: 300px;"  >
       <div class="container">
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-12 text-center mt-5">
             <h1 class="heading" data-aos="fade-up">鹿的設備
             </h1>
 
-            <nav
-              aria-label="breadcrumb"
-              data-aos="fade-up"
-              data-aos-delay="200">
+            <nav aria-label="breadcrumb" data-aos="fade-up" data-aos-delay="200">
               <ol class="breadcrumb text-center justify-content-center">
-                <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
-                <li  class="breadcrumb-item active text-white-50"
-                  aria-current="page" >
+                <li class="breadcrumb-item"><a href="property-1.0.0/index.html">首頁</a></li>
+                <li  class="breadcrumb-item active text-white-50" aria-current="page" >
                   鹿的設備
                 </li>
               </ol>
