--- a/deluxe-master/all-article.html
+++ b/deluxe-master/all-article.html
@@ -66,7 +66,7 @@
   
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item "><a href="property-1.0.0/index.html" class="nav-link">首頁</a></li>
+            <li class="nav-item "><a href="property-1.0.0/index.php" class="nav-link">首頁</a></li>
             <li class="nav-item"><a href="rooms.html" class="nav-link">找小鹿</a></li>
             <li class="nav-item"><a href="all-article.html" class="nav-link">鹿的分享</a></li>
             <li class="nav-item"><a href="equipment.html" class="nav-link">鹿的裝備</a></li>
