--- a/deluxe-master/property-1.0.0/manage-equip.html
+++ b/deluxe-master/property-1.0.0/manage-equip.html
@@ -50,36 +50,37 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-     <div class="container">
-      <a href="index.html"><img class="navbar-brand" src="images/Group 59.png" style="width: 90px; height: auto;"></img></a>
-
-       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="oi oi-menu"></span> 選單
-       </button>
-
-       <div class="collapse navbar-collapse" id="ftco-nav">
-         <ul class="navbar-nav ml-auto">
-           <li class="nav-item "><a href="index.html" class="nav-link">首頁</a></li>
-           <li class="nav-item"><a href="rooms.html" class="nav-link">找小鹿</a></li>
-           <li class="nav-item"><a href="restaurant.html" class="nav-link">鹿的分享</a></li>
-           <li class="nav-item"><a href="about.html" class="nav-link">鹿的裝備</a></li>
-           <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+      <div class="container">
+        <a href="index.html"><img class="navbar-brand" src="images/Group 59.png" style="width: 90px; height: auto;"></img></a>
+  
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="oi oi-menu"></span> 選單
+        </button>
+  
+        <div class="collapse navbar-collapse" id="ftco-nav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item "><a href="index.html" class="nav-link">首頁</a></li>
+            <li class="nav-item"><a href="rooms.html" class="nav-link">找小鹿</a></li>
+            <li class="nav-item"><a href="restaurant.html" class="nav-link">鹿的分享</a></li>
+            <li class="nav-item"><a href="about.html" class="nav-link">鹿的裝備</a></li>
+            <li class="nav-item"><a href="blog.html" class="nav-link">廣告方案</a></li>
+  
             <li class="nav-item dropdown active">
               <a class="nav-link dropdown-toggle" href="member.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 帳號
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="member.html">會員帳號</a>
-                <a class="dropdown-item" href="member-like.html">我的收藏</a>
+                <a class="dropdown-item" href="member.php">會員帳號</a>
+                <a class="dropdown-item" href="member-like.php">我的收藏</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">登出</a>
+                <a class="dropdown-item" href="../../login.php">登出</a>
               </div>
             </li>
-            
-         </ul> 
-       </div>
-     </div>
-   </nav>
+  
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <div class="hero page-inner overlay" style="background-image: url('images/Rectangle\ 134.png')" >
       <div class="container">
@@ -933,81 +934,49 @@
         </div>
   
       <div class="site-footer">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4">
-              <div class="widget">
-                <h3>Contact</h3>
-                <address>43 Raymouth Rd. Baltemoer, London 3910</address>
-                <ul class="list-unstyled links">
-                  <li><a href="tel://11234567890">+1(123)-456-7890</a></li>
-                  <li><a href="tel://11234567890">+1(123)-456-7890</a></li>
-                  <li>
-                    <a href="mailto:info@mydomain.com">info@mydomain.com</a>
-                  </li>
-                </ul>
-              </div>
-              <!-- /.widget -->
+        <div class="container"> <div class="row">
+
+          <!-- /.col-lg-4 -->
+          <div class="col-lg-5">
+            <div class="widget">
+              <h3>聯絡資訊</h3>
+              <address>StartCamping 營在起跑點！</address>
+              <ul class="list-unstyled links">
+                <li><a href="tel://11234567890">0911222345</a></li>
+                <li><a href="tel://11234567890">@startcamping</a></li>
+                <li>
+                  <a href="mailto:info@mydomain.com">startcamping@gmail.com</a>
+                </li>
+              </ul>
             </div>
-            <!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-              <div class="widget">
-                <h3>Sources</h3>
-                <ul class="list-unstyled float-start links">
-                  <li><a href="#">About us</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Vision</a></li>
-                  <li><a href="#">Mission</a></li>
-                  <li><a href="#">Terms</a></li>
-                  <li><a href="#">Privacy</a></li>
-                </ul>
-                <ul class="list-unstyled float-start links">
-                  <li><a href="#">Partners</a></li>
-                  <li><a href="#">Business</a></li>
-                  <li><a href="#">Careers</a></li>
-                  <li><a href="#">Blog</a></li>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">Creative</a></li>
-                </ul>
-              </div>
-              <!-- /.widget -->
-            </div>
-            <!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-              <div class="widget">
-                <h3>Links</h3>
-                <ul class="list-unstyled links">
-                  <li><a href="#">Our Vision</a></li>
-                  <li><a href="#">About us</a></li>
-                  <li><a href="#">Contact us</a></li>
-                </ul>
-  
-                <ul class="list-unstyled social">
-                  <li>
-                    <a href="#"><span class="icon-instagram"></span></a>
-                  </li>
-                  <li>
-                    <a href="#"><span class="icon-twitter"></span></a>
-                  </li>
-                  <li>
-                    <a href="#"><span class="icon-facebook"></span></a>
-                  </li>
-                  <li>
-                    <a href="#"><span class="icon-linkedin"></span></a>
-                  </li>
-                  <li>
-                    <a href="#"><span class="icon-pinterest"></span></a>
-                  </li>
-                  <li>
-                    <a href="#"><span class="icon-dribbble"></span></a>
-                  </li>
-                </ul>
-              </div>
-              <!-- /.widget -->
-            </div>
-            <!-- /.col-lg-4 -->
+            <!-- /.widget -->
           </div>
-          <!-- /.row -->
+          <!-- /.col-lg-4 -->
+          <div class="col-lg-5">
+            <div class="widget">
+              <h3>頁面總覽</h3>
+              <ul class="list-unstyled float-start links">
+                <li><a href="index.php">首頁</a></li>
+                <li><a href="camp-information.html">找小鹿</a></li>
+                <li><a href="../all-article.html">鹿的分享</a></li>
+                <li><a href="../equipment.html">鹿的裝備</a></li>
+                <li><a href="#">廣告方案</a></li>
+              </ul>
+              <ul class="list-unstyled float-start links">
+                <li><a href="member.php">帳號</a></li>
+                <li><a href="member.php">會員帳號</a></li>
+                <li><a href="member-like.php">我的收藏</a></li>
+              </ul>
+            </div>
+            <!-- /.widget -->
+          </div>
+          <!-- /.col-lg-4 -->
+          <div class="col-lg-2">
+            <!-- /.widget -->
+          </div>
+        </div>
+        <!-- /.row -->
+
   
           <div class="row mt-5">
             <div class="col-12 text-center">
