--- a/deluxe-master/property-1.0.0/ad.html
+++ b/deluxe-master/property-1.0.0/ad.html
@@ -103,7 +103,7 @@
       </div>
     </div>
 
-    <div class="container" style="margin-top: 50px;">
+    <div class="container mt-5 mb-5">
 
         <span style="text-align: center;margin-top: 10px;font-weight: bold;color: #000;">
             <h4 style="font-weight: bold;">廣告方案</h4>
