--- a/deluxe-master/property-1.0.0/ad.html
+++ b/deluxe-master/property-1.0.0/ad.html
@@ -59,20 +59,20 @@
 
        <div class="collapse navbar-collapse" id="ftco-nav">
          <ul class="navbar-nav ml-auto">
-           <li class="nav-item "><a href="index.html" class="nav-link">首頁</a></li>
-           <li class="nav-item"><a href="rooms.html" class="nav-link">找小鹿</a></li>
-           <li class="nav-item"><a href="restaurant.html" class="nav-link">鹿的分享</a></li>
-           <li class="nav-item"><a href="about.html" class="nav-link">鹿的裝備</a></li>
-           <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+          <li class="nav-item active"><a href="index.php" class="nav-link">首頁</a></li>
+          <li class="nav-item"><a href="camp-information.php" class="nav-link">找小鹿</a></li>
+          <li class="nav-item"><a href="../all-article.php" class="nav-link">鹿的分享</a></li>
+          <li class="nav-item"><a href="../equipment.php" class="nav-link">鹿的裝備</a></li>
+          <li class="nav-item"><a href="ad.html" class="nav-link">廣告方案</a></li>
             <li class="nav-item dropdown active">
               <a class="nav-link dropdown-toggle" href="member.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 帳號
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="member.html">會員帳號</a>
-                <a class="dropdown-item" href="member-like.html">我的收藏</a>
+                <a class="dropdown-item" href="member.php">會員帳號</a>
+                <a class="dropdown-item" href="member-like.php">我的收藏</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">登出</a>
+                <a class="dropdown-item" href="../../logout.php">登出</a>
               </div>
             </li>
             
@@ -89,12 +89,10 @@
 
             <nav aria-label="breadcrumb" data-aos="fade-up" data-aos-delay="200">
               <ol class="breadcrumb text-center justify-content-center">
-                <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
+                <li class="breadcrumb-item"><a href="index.php">首頁</a></li>
                 
-                <li
-                  class="breadcrumb-item active text-white-50"
-                  aria-current="page">
-                  營地
+                <li class="breadcrumb-item active text-white-50" aria-current="page">
+                  廣告方案
                 </li>
               </ol>
             </nav>
@@ -208,81 +206,48 @@
             </div>
   
       <div class="site-footer" style="margin-top: 0px;">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4">
-              <div class="widget">
-                <h3>Contact</h3>
-                <address>43 Raymouth Rd. Baltemoer, London 3910</address>
-                <ul class="list-unstyled links">
-                  <li><a href="tel://11234567890">+1(123)-456-7890</a></li>
-                  <li><a href="tel://11234567890">+1(123)-456-7890</a></li>
-                  <li>
-                    <a href="mailto:info@mydomain.com">info@mydomain.com</a>
-                  </li>
-                </ul>
-              </div>
-              <!-- /.widget -->
+        <div class="container"><div class="row">
+
+          <!-- /.col-lg-4 -->
+          <div class="col-lg-5">
+            <div class="widget">
+              <h3>聯絡資訊</h3>
+              <address>StartCamping 營在起跑點！</address>
+              <ul class="list-unstyled links">
+                <li><a href="tel://11234567890">0911222345</a></li>
+                <li><a href="tel://11234567890">@startcamping</a></li>
+                <li>
+                  <a href="mailto:info@mydomain.com">startcamping@gmail.com</a>
+                </li>
+              </ul>
             </div>
-            <!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-              <div class="widget">
-                <h3>Sources</h3>
-                <ul class="list-unstyled float-start links">
-                  <li><a href="#">About us</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Vision</a></li>
-                  <li><a href="#">Mission</a></li>
-                  <li><a href="#">Terms</a></li>
-                  <li><a href="#">Privacy</a></li>
-                </ul>
-                <ul class="list-unstyled float-start links">
-                  <li><a href="#">Partners</a></li>
-                  <li><a href="#">Business</a></li>
-                  <li><a href="#">Careers</a></li>
-                  <li><a href="#">Blog</a></li>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">Creative</a></li>
-                </ul>
-              </div>
-              <!-- /.widget -->
-            </div>
-            <!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-              <div class="widget">
-                <h3>Links</h3>
-                <ul class="list-unstyled links">
-                  <li><a href="#">Our Vision</a></li>
-                  <li><a href="#">About us</a></li>
-                  <li><a href="#">Contact us</a></li>
-                </ul>
-  
-                <ul class="list-unstyled social">
-                  <li>
-                    <a href="#"><span class="icon-instagram"></span></a>
-                  </li>
-                  <li>
-                    <a href="#"><span class="icon-twitter"></span></a>
-                  </li>
-                  <li>
-                    <a href="#"><span class="icon-facebook"></span></a>
-                  </li>
-                  <li>
-                    <a href="#"><span class="icon-linkedin"></span></a>
-                  </li>
-                  <li>
-                    <a href="#"><span class="icon-pinterest"></span></a>
-                  </li>
-                  <li>
-                    <a href="#"><span class="icon-dribbble"></span></a>
-                  </li>
-                </ul>
-              </div>
-              <!-- /.widget -->
-            </div>
-            <!-- /.col-lg-4 -->
+            <!-- /.widget -->
           </div>
-          <!-- /.row -->
+          <!-- /.col-lg-4 -->
+          <div class="col-lg-5">
+            <div class="widget">
+              <h3>頁面總覽</h3>
+              <ul class="list-unstyled float-start links">
+                <li><a href="index.php">首頁</a></li>
+                <li><a href="camp-information.html">找小鹿</a></li>
+                <li><a href="../all-article.html">鹿的分享</a></li>
+                <li><a href="../equipment.html">鹿的裝備</a></li>
+                <li><a href="#">廣告方案</a></li>
+              </ul>
+              <ul class="list-unstyled float-start links">
+                <li><a href="member.php">帳號</a></li>
+                <li><a href="member.php">會員帳號</a></li>
+                <li><a href="member-like.php">我的收藏</a></li>
+              </ul>
+            </div>
+            <!-- /.widget -->
+          </div>
+          <!-- /.col-lg-4 -->
+          <div class="col-lg-2">
+            <!-- /.widget -->
+          </div>
+        </div>
+        <!-- /.row -->
   
           <div class="row mt-5">
             <div class="col-12 text-center">
