--- a/deluxe-master/property-1.0.0/edit-land.html
+++ b/deluxe-master/property-1.0.0/edit-land.html
@@ -71,7 +71,7 @@
 	          <li class="nav-item"><a href="about.html" class="nav-link">鹿的裝備</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	           
-            <li class="nav-item dropdown active">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="member.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 帳號
               </a>
